# Learning

./: .gitignore  README.md  height.py
C++/: 32-bit_color.cpp  XOchamps.cpp  abstract_classes.cpp  argc_argv.cpp  bankprac.cpp  bubblesort.cpp  calculator.cpp  cat.cpp  cerr.cpp  cerr_imp_example.cpp  channelnum.cpp  clog_example.cpp  commandline_arguments.cpp  constructor.cpp  copy_constructor.cpp  copy_string.cpp  country_names.txt  cout_fill.cpp  cout_width.cpp  creditNumber.cpp  data.txt  default_value.cpp  error.txt  escape_backspace.cpp  file.cpp  file_dbms.cpp  file_get_put.cpp  file_io.cpp  file_io_2.cpp  file_io_random_access.cpp  file_with_user_datatypes.cpp  filesystem.md  friend.cpp  friend2.cpp  get_functions.cpp  hypotheunse.cpp  inheritance.cpp  iomanip.cpp  isbool.cpp  log.txt  (+34 more)
C++/Exercises/: 3_3.cpp  3_4.cpp  3_5.cpp  3_6.cpp
C++/math_utils/: main.cpp  mathutils  mathutils.cpp  mathutils.h
Python/: 1.html  average.py  main.py  maxpossiblearea.py  patch_notes.py  scrapper.py  second_highest_score.py  test.html  test.py  webscrapper.py
QT/Exercises/Temperature_Converter/: CMakeLists.txt  main.cpp  temperature.cpp  temperature.h
QT/Exercises/Temperature_Converter/.cache/clangd/index/: main.cpp.B0CD9E9B871EDAE3.idx  temperature.cpp.6873E8ADF0475927.idx
QT/Exercises/Temperature_plus_Qtimer/: CMakeLists.txt  main.cpp  temperature.h
QT/Exercises/Temperature_plus_Qtimer/.cache/clangd/index/: main.cpp.46DCCA952CD631AA.idx
QT/HelloWorldGui/: CMakeLists.txt  main.cpp
QT/HelloWorldGui/.cache/clangd/index/: main.cpp.3AA077F78EE59732.idx
QT/Signal_Slot/: CMakeLists.txt  main.cpp  receiver.cpp  receiver.h  sender.cpp  sender.h
Qt/Temperature_iterator/: CMakeLists.txt  main.cpp  temperature.cpp  temperature.h
Shell_scripting/: Notes.md  arrays.sh  blink.sh  bold.sh  exitcode.sh  function.sh  ifelif.sh  interactive.sh  login.sh  loop.sh  maps.json  python-tools.sh  script.sh  test.sh
(+50 files in other folders)
